# pricescraper

./: .env  .gitignore  Dockerfile  cronjob-debug.sh  cronjob-scrape.sh  database.py  docker-compose.yml  empty.py  main.py  models.py  pyproject.toml  requirements.txt  run.py  test.py
app/: config.py  database.py  main.py
app/models/: models.py
app/routers/: scraper_router.py  tge_rdn_scraper_router.py  utils.py
app/services/: scraper.py
routers/: scraper_router.py
scraper/: scraper.py
