[tool.poetry]
name = "tge-scraper"
version = "0.1.0"
description = ""
authors = ["Krystian Chudzik <kchudzik@electrum.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
beautifulsoup4 = "4.12.2"
fastapi = "0.103.1"
numpy = "^1.26.4"
pydantic = "2.3.0"
requests = "2.31.0"
sqlalchemy = "2.0.20"
starlette = "0.27.0"
uvicorn = "0.22.0"
psycopg2-binary = "2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
